--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -98,7 +98,6 @@
 
 @media screen and (max-width: 768px) {
   .about-page {
- 
     top: 70%;
     left: -100px;
 
@@ -112,11 +111,22 @@
   }
 }
 
-@media screen and (max-width: 480px) {
-  // .about-page {
-  //   right: 100px;
-  // }
-}
+@media screen and (max-height: 700px) {
+  .text-zone {
+    width: 100%;
+  }
 
-@media screen and (max-width: 400px) {
+  .about-me-title {
+    width: 100%;
+  }
+
+  .about-me-text {
+    position: relative;
+    right: 30px;
+    width: 200px;
+  }
+
+  .about-page {
+    top: 600px !important;
+  }
 }
